// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Radio[Base] should render correctly  1`] = `
<div
  class="cyirhq6 soui-radio-wrapper"
>
  <input
    style="display: none;"
    tabindex="0"
    type="radio"
  />
  <span
    class="cmfinsp soui-radio-indicator-wrapper"
  >
    <span
      class="c-7zjjk6 soui-radio-indicator"
      tabindex="1"
    />
  </span>
  <span
    class="c-xmqy62 soui-radio-desc"
  >
    Option
  </span>
</div>
`;

exports[`Radio[Base] should render correctly about block 1`] = `
<div
  class="cmxd0kq soui-radio-group"
>
  <div
    class="cyirhq6 soui-radio-wrapper"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="cmfinsp soui-radio-indicator-wrapper"
    >
      <span
        class="c-7zjjk6 soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="c-xmqy62 soui-radio-desc"
    >
      red
    </span>
  </div>
  <div
    class="cyirhq6 soui-radio-wrapper"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="cmfinsp soui-radio-indicator-wrapper"
    >
      <span
        class="c-7zjjk6 soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="c-xmqy62 soui-radio-desc"
    >
      orange
    </span>
  </div>
  <div
    class="cyirhq6 soui-radio-wrapper c-uazd13 soui-radio-wrapper-checked"
  >
    <input
      checked=""
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="cmfinsp soui-radio-indicator-wrapper"
    >
      <span
        class="c-7zjjk6 soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="c-xmqy62 soui-radio-desc"
    >
      yellow
    </span>
  </div>
  <div
    class="cyirhq6 soui-radio-wrapper"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="cmfinsp soui-radio-indicator-wrapper"
    >
      <span
        class="c-7zjjk6 soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="c-xmqy62 soui-radio-desc"
    >
      green
    </span>
  </div>
  <div
    class="cyirhq6 soui-radio-wrapper"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="cmfinsp soui-radio-indicator-wrapper"
    >
      <span
        class="c-7zjjk6 soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="c-xmqy62 soui-radio-desc"
    >
      cyan
    </span>
  </div>
  <div
    class="cyirhq6 soui-radio-wrapper"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="cmfinsp soui-radio-indicator-wrapper"
    >
      <span
        class="c-7zjjk6 soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="c-xmqy62 soui-radio-desc"
    >
      blue
    </span>
  </div>
  <div
    class="cyirhq6 soui-radio-wrapper"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="cmfinsp soui-radio-indicator-wrapper"
    >
      <span
        class="c-7zjjk6 soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="c-xmqy62 soui-radio-desc"
    >
      violet
    </span>
  </div>
</div>
`;

exports[`Radio[Base] should render correctly about button 1`] = `
<div
  class="cmxd0kq soui-radio-group cm3iigs soui-radio-group-button cyr2o3r soui-button-group"
  dir="ltr"
>
  <button
    class="cyirhq6 soui-radio-wrapper cigcc58 soui-button-secondary c9j4dnu soui-button-button"
    dir="ltr"
    type="button"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span>
      Monday
    </span>
  </button>
  <button
    class="cyirhq6 soui-radio-wrapper cigcc58 soui-button-secondary c9j4dnu soui-button-button"
    dir="ltr"
    type="button"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span>
      Tuesday
    </span>
  </button>
  <button
    class="cyirhq6 soui-radio-wrapper c-uazd13 soui-radio-wrapper-checked c25800a soui-button-primary c9j4dnu soui-button-button"
    dir="ltr"
    type="button"
  >
    <input
      checked=""
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span>
      Wednesday
    </span>
  </button>
  <button
    class="cyirhq6 soui-radio-wrapper cigcc58 soui-button-secondary c9j4dnu soui-button-button"
    dir="ltr"
    type="button"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span>
      Thursday
    </span>
  </button>
  <button
    class="cyirhq6 soui-radio-wrapper cigcc58 soui-button-secondary c9j4dnu soui-button-button"
    dir="ltr"
    type="button"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span>
      Friday
    </span>
  </button>
  <button
    class="cyirhq6 soui-radio-wrapper cigcc58 soui-button-secondary c9j4dnu soui-button-button"
    dir="ltr"
    type="button"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span>
      Saturday
    </span>
  </button>
  <button
    class="cyirhq6 soui-radio-wrapper cigcc58 soui-button-secondary c9j4dnu soui-button-button"
    dir="ltr"
    type="button"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span>
      Sunday
    </span>
  </button>
</div>
`;

exports[`Radio[Base] should render correctly about button outline 1`] = `
<div
  class="cmxd0kq soui-radio-group cm3iigs soui-radio-group-button cyr2o3r soui-button-group"
  dir="ltr"
>
  <button
    class="cyirhq6 soui-radio-wrapper cigcc58 soui-button-secondary c9j4dnu soui-button-button c-ay05o6 soui-button-outline"
    dir="ltr"
    type="button"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span>
      Monday
    </span>
  </button>
  <button
    class="cyirhq6 soui-radio-wrapper cigcc58 soui-button-secondary c9j4dnu soui-button-button c-ay05o6 soui-button-outline"
    dir="ltr"
    type="button"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span>
      Tuesday
    </span>
  </button>
  <button
    class="cyirhq6 soui-radio-wrapper c-uazd13 soui-radio-wrapper-checked c25800a soui-button-primary c9j4dnu soui-button-button c-ay05o6 soui-button-outline"
    dir="ltr"
    type="button"
  >
    <input
      checked=""
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span>
      Wednesday
    </span>
  </button>
  <button
    class="cyirhq6 soui-radio-wrapper cigcc58 soui-button-secondary c9j4dnu soui-button-button c-ay05o6 soui-button-outline"
    dir="ltr"
    type="button"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span>
      Thursday
    </span>
  </button>
  <button
    class="cyirhq6 soui-radio-wrapper cigcc58 soui-button-secondary c9j4dnu soui-button-button c-ay05o6 soui-button-outline"
    dir="ltr"
    type="button"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span>
      Friday
    </span>
  </button>
  <button
    class="cyirhq6 soui-radio-wrapper cigcc58 soui-button-secondary c9j4dnu soui-button-button c-ay05o6 soui-button-outline"
    dir="ltr"
    type="button"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span>
      Saturday
    </span>
  </button>
  <button
    class="cyirhq6 soui-radio-wrapper cigcc58 soui-button-secondary c9j4dnu soui-button-button c-ay05o6 soui-button-outline"
    dir="ltr"
    type="button"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span>
      Sunday
    </span>
  </button>
</div>
`;

exports[`Radio[Base] should render correctly about cancel 1`] = `
<div
  class="cmxd0kq soui-radio-group"
>
  <div
    class="cyirhq6 soui-radio-wrapper c-uazd13 soui-radio-wrapper-checked"
  >
    <input
      checked=""
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="cmfinsp soui-radio-indicator-wrapper"
    >
      <span
        class="c-7zjjk6 soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="c-xmqy62 soui-radio-desc"
    >
      red
    </span>
  </div>
  <div
    class="cyirhq6 soui-radio-wrapper"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="cmfinsp soui-radio-indicator-wrapper"
    >
      <span
        class="c-7zjjk6 soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="c-xmqy62 soui-radio-desc"
    >
      orange
    </span>
  </div>
  <div
    class="cyirhq6 soui-radio-wrapper"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="cmfinsp soui-radio-indicator-wrapper"
    >
      <span
        class="c-7zjjk6 soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="c-xmqy62 soui-radio-desc"
    >
      yellow
    </span>
  </div>
  <div
    class="cyirhq6 soui-radio-wrapper"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="cmfinsp soui-radio-indicator-wrapper"
    >
      <span
        class="c-7zjjk6 soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="c-xmqy62 soui-radio-desc"
    >
      green
    </span>
  </div>
  <div
    class="cyirhq6 soui-radio-wrapper"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="cmfinsp soui-radio-indicator-wrapper"
    >
      <span
        class="c-7zjjk6 soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="c-xmqy62 soui-radio-desc"
    >
      cyan
    </span>
  </div>
  <div
    class="cyirhq6 soui-radio-wrapper"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="cmfinsp soui-radio-indicator-wrapper"
    >
      <span
        class="c-7zjjk6 soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="c-xmqy62 soui-radio-desc"
    >
      blue
    </span>
  </div>
  <div
    class="cyirhq6 soui-radio-wrapper"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="cmfinsp soui-radio-indicator-wrapper"
    >
      <span
        class="c-7zjjk6 soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="c-xmqy62 soui-radio-desc"
    >
      violet
    </span>
  </div>
</div>
`;

exports[`Radio[Base] should render correctly about disabled 1`] = `
<div
  class="cmxd0kq soui-radio-group"
>
  <div
    class="cyirhq6 soui-radio-wrapper cy1erru soui-radio-wrapper-disabled"
  >
    <input
      disabled=""
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="cmfinsp soui-radio-indicator-wrapper"
    >
      <span
        class="c-7zjjk6 soui-radio-indicator"
        tabindex="-1"
      />
    </span>
    <span
      class="c-xmqy62 soui-radio-desc"
    >
      red
    </span>
  </div>
  <div
    class="cyirhq6 soui-radio-wrapper cy1erru soui-radio-wrapper-disabled"
  >
    <input
      disabled=""
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="cmfinsp soui-radio-indicator-wrapper"
    >
      <span
        class="c-7zjjk6 soui-radio-indicator"
        tabindex="-1"
      />
    </span>
    <span
      class="c-xmqy62 soui-radio-desc"
    >
      orange
    </span>
  </div>
  <div
    class="cyirhq6 soui-radio-wrapper cy1erru soui-radio-wrapper-disabled"
  >
    <input
      disabled=""
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="cmfinsp soui-radio-indicator-wrapper"
    >
      <span
        class="c-7zjjk6 soui-radio-indicator"
        tabindex="-1"
      />
    </span>
    <span
      class="c-xmqy62 soui-radio-desc"
    >
      yellow
    </span>
  </div>
  <div
    class="cyirhq6 soui-radio-wrapper cy1erru soui-radio-wrapper-disabled"
  >
    <input
      disabled=""
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="cmfinsp soui-radio-indicator-wrapper"
    >
      <span
        class="c-7zjjk6 soui-radio-indicator"
        tabindex="-1"
      />
    </span>
    <span
      class="c-xmqy62 soui-radio-desc"
    >
      green
    </span>
  </div>
  <div
    class="cyirhq6 soui-radio-wrapper cy1erru soui-radio-wrapper-disabled"
  >
    <input
      disabled=""
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="cmfinsp soui-radio-indicator-wrapper"
    >
      <span
        class="c-7zjjk6 soui-radio-indicator"
        tabindex="-1"
      />
    </span>
    <span
      class="c-xmqy62 soui-radio-desc"
    >
      cyan
    </span>
  </div>
  <div
    class="cyirhq6 soui-radio-wrapper cy1erru soui-radio-wrapper-disabled c-uazd13 soui-radio-wrapper-checked"
  >
    <input
      checked=""
      disabled=""
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="cmfinsp soui-radio-indicator-wrapper"
    >
      <span
        class="c-7zjjk6 soui-radio-indicator"
        tabindex="-1"
      />
    </span>
    <span
      class="c-xmqy62 soui-radio-desc"
    >
      blue
    </span>
  </div>
  <div
    class="cyirhq6 soui-radio-wrapper cy1erru soui-radio-wrapper-disabled"
  >
    <input
      disabled=""
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="cmfinsp soui-radio-indicator-wrapper"
    >
      <span
        class="c-7zjjk6 soui-radio-indicator"
        tabindex="-1"
      />
    </span>
    <span
      class="c-xmqy62 soui-radio-desc"
    >
      violet
    </span>
  </div>
</div>
`;

exports[`Radio[Base] should render correctly about disabled func 1`] = `
<div
  class="cmxd0kq soui-radio-group"
>
  <div
    class="cyirhq6 soui-radio-wrapper"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="cmfinsp soui-radio-indicator-wrapper"
    >
      <span
        class="c-7zjjk6 soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="c-xmqy62 soui-radio-desc"
    >
      red
    </span>
  </div>
  <div
    class="cyirhq6 soui-radio-wrapper"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="cmfinsp soui-radio-indicator-wrapper"
    >
      <span
        class="c-7zjjk6 soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="c-xmqy62 soui-radio-desc"
    >
      orange
    </span>
  </div>
  <div
    class="cyirhq6 soui-radio-wrapper cy1erru soui-radio-wrapper-disabled"
  >
    <input
      disabled=""
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="cmfinsp soui-radio-indicator-wrapper"
    >
      <span
        class="c-7zjjk6 soui-radio-indicator"
        tabindex="-1"
      />
    </span>
    <span
      class="c-xmqy62 soui-radio-desc"
    >
      yellow
    </span>
  </div>
  <div
    class="cyirhq6 soui-radio-wrapper"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="cmfinsp soui-radio-indicator-wrapper"
    >
      <span
        class="c-7zjjk6 soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="c-xmqy62 soui-radio-desc"
    >
      green
    </span>
  </div>
  <div
    class="cyirhq6 soui-radio-wrapper"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="cmfinsp soui-radio-indicator-wrapper"
    >
      <span
        class="c-7zjjk6 soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="c-xmqy62 soui-radio-desc"
    >
      cyan
    </span>
  </div>
  <div
    class="cyirhq6 soui-radio-wrapper c-uazd13 soui-radio-wrapper-checked"
  >
    <input
      checked=""
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="cmfinsp soui-radio-indicator-wrapper"
    >
      <span
        class="c-7zjjk6 soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="c-xmqy62 soui-radio-desc"
    >
      blue
    </span>
  </div>
  <div
    class="cyirhq6 soui-radio-wrapper"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="cmfinsp soui-radio-indicator-wrapper"
    >
      <span
        class="c-7zjjk6 soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="c-xmqy62 soui-radio-desc"
    >
      violet
    </span>
  </div>
</div>
`;

exports[`Radio[Base] should render correctly about group 1`] = `
<div
  class="cmxd0kq soui-radio-group"
>
  <div
    class="cyirhq6 soui-radio-wrapper"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="cmfinsp soui-radio-indicator-wrapper"
    >
      <span
        class="c-7zjjk6 soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="c-xmqy62 soui-radio-desc"
    >
      red
    </span>
  </div>
  <div
    class="cyirhq6 soui-radio-wrapper"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="cmfinsp soui-radio-indicator-wrapper"
    >
      <span
        class="c-7zjjk6 soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="c-xmqy62 soui-radio-desc"
    >
      orange
    </span>
  </div>
  <div
    class="cyirhq6 soui-radio-wrapper"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="cmfinsp soui-radio-indicator-wrapper"
    >
      <span
        class="c-7zjjk6 soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="c-xmqy62 soui-radio-desc"
    >
      yellow
    </span>
  </div>
  <div
    class="cyirhq6 soui-radio-wrapper"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="cmfinsp soui-radio-indicator-wrapper"
    >
      <span
        class="c-7zjjk6 soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="c-xmqy62 soui-radio-desc"
    >
      green
    </span>
  </div>
  <div
    class="cyirhq6 soui-radio-wrapper"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="cmfinsp soui-radio-indicator-wrapper"
    >
      <span
        class="c-7zjjk6 soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="c-xmqy62 soui-radio-desc"
    >
      cyan
    </span>
  </div>
  <div
    class="cyirhq6 soui-radio-wrapper c-uazd13 soui-radio-wrapper-checked"
  >
    <input
      checked=""
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="cmfinsp soui-radio-indicator-wrapper"
    >
      <span
        class="c-7zjjk6 soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="c-xmqy62 soui-radio-desc"
    >
      blue
    </span>
  </div>
  <div
    class="cyirhq6 soui-radio-wrapper"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="cmfinsp soui-radio-indicator-wrapper"
    >
      <span
        class="c-7zjjk6 soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="c-xmqy62 soui-radio-desc"
    >
      violet
    </span>
  </div>
</div>
`;

exports[`Radio[Base] should render correctly about group children 1`] = `
<div
  class="cmxd0kq soui-radio-group"
>
  <div
    class="cyirhq6 soui-radio-wrapper"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="cmfinsp soui-radio-indicator-wrapper"
    >
      <span
        class="c-7zjjk6 soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="c-xmqy62 soui-radio-desc"
    >
      red
    </span>
  </div>
  <div
    class="cyirhq6 soui-radio-wrapper"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="cmfinsp soui-radio-indicator-wrapper"
    >
      <span
        class="c-7zjjk6 soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="c-xmqy62 soui-radio-desc"
    >
      orange
    </span>
  </div>
  <div
    class="cyirhq6 soui-radio-wrapper c-uazd13 soui-radio-wrapper-checked"
  >
    <input
      checked=""
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="cmfinsp soui-radio-indicator-wrapper"
    >
      <span
        class="c-7zjjk6 soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="c-xmqy62 soui-radio-desc"
    >
      yellow
    </span>
  </div>
  <div
    class="cyirhq6 soui-radio-wrapper"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="cmfinsp soui-radio-indicator-wrapper"
    >
      <span
        class="c-7zjjk6 soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="c-xmqy62 soui-radio-desc"
    >
      green
    </span>
  </div>
  <div
    class="cyirhq6 soui-radio-wrapper"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="cmfinsp soui-radio-indicator-wrapper"
    >
      <span
        class="c-7zjjk6 soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="c-xmqy62 soui-radio-desc"
    >
      cyan
    </span>
  </div>
  <div
    class="cyirhq6 soui-radio-wrapper"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="cmfinsp soui-radio-indicator-wrapper"
    >
      <span
        class="c-7zjjk6 soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="c-xmqy62 soui-radio-desc"
    >
      blue
    </span>
  </div>
  <div
    class="cyirhq6 soui-radio-wrapper"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="cmfinsp soui-radio-indicator-wrapper"
    >
      <span
        class="c-7zjjk6 soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="c-xmqy62 soui-radio-desc"
    >
      violet
    </span>
  </div>
</div>
`;

exports[`Radio[Base] should render correctly about size 1`] = `
<div>
  <div
    class="cmxd0kq soui-radio-group cm3iigs soui-radio-group-button cyr2o3r soui-button-group"
    dir="ltr"
  >
    <button
      class="cyirhq6 soui-radio-wrapper c-uazd13 soui-radio-wrapper-checked c25800a soui-button-primary c9j4dnu soui-button-button cyxkpov soui-button-small"
      dir="ltr"
      type="button"
    >
      <input
        checked=""
        style="display: none;"
        tabindex="0"
        type="radio"
      />
      <span>
        red
      </span>
    </button>
    <button
      class="cyirhq6 soui-radio-wrapper cigcc58 soui-button-secondary c9j4dnu soui-button-button cyxkpov soui-button-small"
      dir="ltr"
      type="button"
    >
      <input
        style="display: none;"
        tabindex="0"
        type="radio"
      />
      <span>
        orange
      </span>
    </button>
    <button
      class="cyirhq6 soui-radio-wrapper cigcc58 soui-button-secondary c9j4dnu soui-button-button cyxkpov soui-button-small"
      dir="ltr"
      type="button"
    >
      <input
        style="display: none;"
        tabindex="0"
        type="radio"
      />
      <span>
        yellow
      </span>
    </button>
  </div>
  <br />
  <div
    class="cmxd0kq soui-radio-group cm3iigs soui-radio-group-button cyr2o3r soui-button-group"
    dir="ltr"
    style="margin-top: 24px;"
  >
    <button
      class="cyirhq6 soui-radio-wrapper c-uazd13 soui-radio-wrapper-checked c25800a soui-button-primary c9j4dnu soui-button-button"
      dir="ltr"
      type="button"
    >
      <input
        checked=""
        style="display: none;"
        tabindex="0"
        type="radio"
      />
      <span>
        red
      </span>
    </button>
    <button
      class="cyirhq6 soui-radio-wrapper cigcc58 soui-button-secondary c9j4dnu soui-button-button"
      dir="ltr"
      type="button"
    >
      <input
        style="display: none;"
        tabindex="0"
        type="radio"
      />
      <span>
        orange
      </span>
    </button>
    <button
      class="cyirhq6 soui-radio-wrapper cigcc58 soui-button-secondary c9j4dnu soui-button-button"
      dir="ltr"
      type="button"
    >
      <input
        style="display: none;"
        tabindex="0"
        type="radio"
      />
      <span>
        yellow
      </span>
    </button>
  </div>
  <br />
  <div
    class="cmxd0kq soui-radio-group cm3iigs soui-radio-group-button cyr2o3r soui-button-group"
    dir="ltr"
    style="margin-top: 24px;"
  >
    <button
      class="cyirhq6 soui-radio-wrapper c-uazd13 soui-radio-wrapper-checked c25800a soui-button-primary c9j4dnu soui-button-button cytiu6b soui-button-large"
      dir="ltr"
      type="button"
    >
      <input
        checked=""
        style="display: none;"
        tabindex="0"
        type="radio"
      />
      <span>
        red
      </span>
    </button>
    <button
      class="cyirhq6 soui-radio-wrapper cigcc58 soui-button-secondary c9j4dnu soui-button-button cytiu6b soui-button-large"
      dir="ltr"
      type="button"
    >
      <input
        style="display: none;"
        tabindex="0"
        type="radio"
      />
      <span>
        orange
      </span>
    </button>
    <button
      class="cyirhq6 soui-radio-wrapper cigcc58 soui-button-secondary c9j4dnu soui-button-button cytiu6b soui-button-large"
      dir="ltr"
      type="button"
    >
      <input
        style="display: none;"
        tabindex="0"
        type="radio"
      />
      <span>
        yellow
      </span>
    </button>
  </div>
  <br />
</div>
`;

exports[`Radio[Base] should render correctly about status 1`] = `
<div
  class="cyirhq6 soui-radio-wrapper"
>
  <input
    style="display: none;"
    tabindex="0"
    type="radio"
  />
  <span
    class="cmfinsp soui-radio-indicator-wrapper"
  >
    <span
      class="c-7zjjk6 soui-radio-indicator"
      tabindex="1"
    />
  </span>
  <span
    class="c-xmqy62 soui-radio-desc"
  >
    OptionA
  </span>
</div>
`;
